--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:authorities="com.example.joseperdomo.sunshine.app"
             android:name=".data.WeatherProvider"
             />
+        <service android:name=".service.SunshineService"></service>
     </application>
 
 </manifest>
