--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
     package="com.example.joseperdomo.sunshine.app" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Permissions required by the sync adapter -->
+    <uses-permission
+        android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission
+        android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission
+        android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
     <application
         android:allowBackup="true"
@@ -36,11 +43,41 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.joseperdomo.sunshine.app.MyActivity" />
         </activity>
+        <!--Ya no se usan pero lo dejo por referencia-->
+        <!--service android:name=".service.SunshineService"></service>
+        <receiver android:name=".service.SunshineService$AlarmReceiver" android:enabled="true"></receiver-->
+
+        <!-- SyncAdapter's dummy authentication service -->
+        <service
+            android:name=".sync.SunshineAuthenticatorService"
+            >
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+
         <provider
-            android:authorities="com.example.joseperdomo.sunshine.app"
+            android:authorities="@string/content_authority"
             android:name=".data.WeatherProvider"
-            />
-        <service android:name=".service.SunshineService"></service>
+            android:exported="false"
+            android:syncable="true" />
+
+        <!-- The SyncAdapter service -->
+        <service
+            android:name=".sync.SunshineSyncService"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter" />
+        </service>
+
     </application>
 
 </manifest>
